# ComputacionParalela

./: .gitignore  README.md  ikHV5b7fXF.sql
Practica 1/: CMakeCache.txt  CMakeLists.txt  EfectoImagen.cpp  EfectoImagen_hilos.cpp  Grayscale  Grayscale.cpp  Makefile  README.md  cmake_install.cmake  ejecutar_todo.sh  resultados.txt
Practica 2/: CMakeLists.txt  ejecutar_todo.sh  graficas.ods
Practica 3/: CMakeLists.txt  EfectoImagen.cu  README.md  ejecutar_todo.sh  filtro.cu
Practica 4/: EfectoimagenMPI.cpp  ejecutar_todo.sh  example.cpp
Practica 4/pruebas/: ejecutar_todo.sh  hola
Practica2/: EfectoImagen.cpp  EfectoimagenOpenMP.cpp  ejecutar_todo.sh
Proyecto/: CMakeLists.txt  README.md  ejecutar_todo.sh  life.c  life.cpp  lifeOpenMP.cpp
Proyecto MPI/: CMakeLists.txt  EfectoimagenMPI.cpp  ejecutar_todo.sh
Proyecto MPI/pruebas/: EfectoimagenOpenMP.cpp  holamundo.c
Proyecto OpenMp/: CMakeLists.txt  ejecutar_todo.sh  lifeMp.cpp
Proyecto Original/: CMakeLists.txt  ejecutar_todo.sh  init.cpp  life.cpp
Proyecto Original OpenMp/: README.md  ejecutar_todo.sh  lifeMp.cpp  lifeMp1.cpp  lifeMp2.cpp
